--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,17 +1,13 @@
-# This is a basic workflow to help you get started with Actions
+name: Pull MongoDB Docker Image
 
-name: CI
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      image_version:
+        description: 'Specify MongoDB Docker image version'
+        required: true
+        default: '8'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -27,9 +23,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: docker pull mongo:8
+        run: docker pull mongo:${{ env.IMAGE_VERSION }}
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          docker tag mongo:8 mongo:company
+          docker tag mongo:${{ env.IMAGE_VERSION }} mongo:company
